# vingineer

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  convert_copilot.py  convert_oc.py  pyproject.toml
.github/workflows/: build.yml  opencode.yml  test.yml
plans/: feat-selective-file-overwrite.md  refactor-conversion-tool.md
src/claude_migrate/: __init__.py  cli.py  models.py  utils.py
src/claude_migrate/formats/: __init__.py  claude_code.py  copilot.py  opencode.py
tests/: test_cli.py  test_formats.py  test_utils.py
tests/fixtures/: plugin_v2_installed.json
tests/fixtures/claude_edge_cases/.claude/: .mcp.json
tests/fixtures/claude_edge_cases/.claude/agents/: edge-malformed.md  edge-no-name.md
tests/fixtures/claude_edge_cases/.claude/commands/: edge-empty-body.md
tests/fixtures/claude_minimal/.claude/: .mcp.json
tests/fixtures/claude_minimal/.claude/agents/: minimal-agent.md
tests/fixtures/claude_minimal/.claude/commands/: minimal-cmd.md
tests/fixtures/claude_nested/.claude/agents/: simple-agent.md
tests/fixtures/claude_nested/.claude/agents/specialized/: python-expert.md
tests/fixtures/claude_nested/.claude/commands/: simple.md
tests/fixtures/claude_typical/.claude/: .mcp.json
tests/fixtures/claude_typical/.claude/agents/: agent-alpha.md  agent-beta.md
tests/fixtures/claude_typical/.claude/commands/: cmd-alpha.md  cmd-beta.md  cmd-gamma.md
tests/fixtures/plugin_user_dir/.claude/agents/: plugin-agent.md
tests/fixtures/plugin_user_dir/.claude/commands/: plugin-cmd.md
(+2 files in other folders)
