[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-migrate"
version = "0.1.2"
description = "Convert Claude Code configurations to OpenCode and Copilot formats"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.scripts]
claude-migrate = "claude_migrate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_migrate"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=claude_migrate --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
